--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -21,6 +21,9 @@ const { title=SITE_TITLE, description=SITE_DESCRIPTION, image = SITE_IMAGE } = A
 <meta name="generator" content={Astro.generator} />
 <meta name="color-scheme" content="dark light">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 <!-- Canonical URL -->
 
 <!-- Primary Meta Tags -->
