--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,12 @@ import CallToAction from '../components/CallToAction.astro';
 import BentoGrid from '@components/BentoGrid.astro';
 import SpeedSection from '@components/SpeedSection.astro';
 import AboutSection from '@components/AboutSection.astro';
+import BaseHead from "@components/BaseHead.astro";
+
+
 ---
 
-<Layout title="Welcome to Astrolus.">
+<!-- <Layout title="Welcome to Astrolus.">
 	<main class="space-y-16 sm:space-y-28 lg:space-y-32 pb-40 overflow-clip">
 		<HeroSection/>
 		<AboutSection />
@@ -19,4 +22,74 @@ import AboutSection from '@components/AboutSection.astro';
 		<Testimonials/>
 		<CallToAction/>
 	</main>
-</Layout>
+</Layout> -->
+
+
+
+
+<!-- <main class="space-y-16 sm:space-y-28 lg:space-y-32 pb-40 overflow-clip">
+
+	<section class="relative overflow-hidden scroll-mt-24" id="home">  
+		<div
+			aria-hidden
+			class="opacity-0 dark:opacity-25 absolute [background-image:radial-gradient(theme(colors.gray.500),transparent_50%)] top-0 w-[1000px] z-10 h-[800px] left-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none"
+		  />
+
+	</section>
+
+</main> -->
+
+
+
+
+<!-- 
+
+<div class="bg-gray-100">
+	<div class="min-h-screen flex flex-col justify-center items-center">
+	  <img src="https://www.svgrepo.com/show/426192/cogs-settings.svg" alt="Logo" class="mb-8 h-40">
+	  <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-center text-gray-700 mb-4">Site is under maintenance</h1>
+	  <p class="text-center text-gray-500 text-lg md:text-xl lg:text-2xl mb-8">We're working hard to improve the user experience. Stay tuned!</p>
+	</div>
+  </div> -->
+
+
+
+
+
+  <!DOCTYPE html>
+  <html lang="en" class="scroll-smooth">
+	  <head>
+		 <BaseHead />
+	  </head>
+	  <body class="overflow-x-hidden bg-white dark:bg-gray-950 font-inter">
+	
+		
+
+		<div class="bg-[#f8f9ff] text-black text-[15px] w-full h-screen relative">
+			<div class="absolute inset-0">
+			  <img src="https://readymadeui.com/bg-effect.svg" class="w-full h-full object-cover" />
+			</div>
+			<div class="flex items-center justify-center w-full h-full">
+			  <div class="px-4 sm:px-10 max-w-4xl text-center relative z-10">
+				<h1 class="md:text-6xl text-4xl font-extrabold mb-6 md:!leading-[75px] ">
+					Site Is Under Maintenance.
+				  </h1>
+				  
+				<p class="text-lg">
+				  We're working hard to improve the user experience. Stay tuned!
+				</p>
+				<div class="mt-10">
+					<a href="tel:01155411202" class="px-6 py-3 rounded-xl text-white bg-black transition-all hover:bg-black/90">
+						Contact us
+					  </a>
+					  
+				</div>
+			  </div>
+			</div>
+		  </div>
+
+
+
+	  </body>
+  </html>
+
