rounded full cta

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,7 +79,7 @@ import BaseHead from "@components/BaseHead.astro";
 				  We're working hard to improve the user experience. Stay tuned!
 				</p>
 				<div class="mt-10">
-					<a href="tel:01155411202" class="px-6 py-3 rounded-xl text-white bg-black transition-all hover:bg-black/90">
+					<a href="tel:01155411202" class="px-6 py-3 rounded-full text-white bg-black transition-all hover:bg-black/90">
 						Contact us
 					  </a>
 					  
